# OBDII-Car-Gauge

./: OBD2_Project.ino  display.cpp  input.h  obd.h  pids.h
CyberPi/OBDII_Car_Gauge/: OBDII_Car_Gauge.ino  bt.cpp  input.h  nav.cpp  obd.cpp  obd.h
ESP32-S3-Touch-LCD-2.8C-Test/: sdkconfig  sdkconfig.old
ESP32-S3-Touch-LCD-2.8C-Test/main/: CMakeLists.txt  main.c
ESP32-S3-Touch-LCD-2.8C-Test/main/BLE/: ble.c  ble.h  pids.c  pids.h
ESP32-S3-Touch-LCD-2.8C-Test/main/Fonts/: font_dseg7_48.c  font_dseg7_55.c  font_dseg7_75.c
ESP32-S3-Touch-LCD-2.8C-Test/main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h
ESP32-S3-Touch-LCD-2.8C-Test/main/UI/: boot_screen.c  boot_screen.h  debug_screen.c  debug_screen.h  gauge_config.h  gauge_screen.c  gauge_screen.h  scan_screen.c  scan_screen.h
ESP32-S3-Touch-LCD-2.8C-Test/main/Wireless/: Wireless.c
OBD2_Project/: ble.cpp  ble.h  display.h  input.cpp  obd.cpp
OBDII_Car_Gauge/: OBDII_Car_Gauge.ino  app_state.h  bt.cpp  bt.h  hal.h  input.cpp  input.h  input_cyberpi.cpp  input_heltec.cpp  nav.cpp  obd.cpp  pids.h  ui.h  ui_cyberpi.cpp  ui_heltec.cpp
OBDII_Car_Gauge (old)/: bt.cpp  bt.h  hal.h  input_cyberpi.cpp  nav.h  obd.cpp  ui.h
OBDII_Car_Gauge/OBDII_Car_Gauge/: sdkconfig.defaults
Project/: CLAUDE.md  OBDII_Car_Gauge.code-workspace  platformio.ini
Project/src/: Display_ST7701.cpp  Display_ST7701.h  ble.cpp  ble.h  font_dseg7_65.c  input.ccp  input.h  lv_conf.h  main.cpp  obd.cpp  obd.h  pids.h
VScode - First Working/OBDII_Car_Gauge/src/: main.cpp
