idf_component_register(
    SRCS  "main.c"
          "EXIO/TCA9554PWR.c"
          "LCD_Driver/ST7701S.c"
          "Touch_Driver/GT911.c"
          "Touch_Driver/esp_lcd_touch/esp_lcd_touch.c"
          "LVGL_Driver/LVGL_Driver.c"
          "I2C_Driver/I2C_Driver.c"
          "PCF85063/PCF85063.c"
          "QMI8658/QMI8658.c"
          "SD_Card/SD_MMC.c"
          "LVGL_UI/LVGL_Example.c"
          "Buzzer/Buzzer.c"
          "BAT_Driver/BAT_Driver.c"
          "BLE/ble.c"
          "BLE/pids.c"
          "UI/scan_screen.c"
          "UI/debug_screen.c"

    INCLUDE_DIRS
          "./EXIO"
          "./LCD_Driver"
          "./Touch_Driver"
          "./Touch_Driver/esp_lcd_touch"
          "./LVGL_Driver"
          "./I2C_Driver"
          "./PCF85063"
          "./QMI8658"
          "./SD_Card"
          "./LVGL_UI"
          "./Buzzer"
          "./BAT_Driver"
          "./BLE"
          "./UI"
          "."

      REQUIRES
            bt
            nvs_flash
            driver
            fatfs
            esp_adc
            esp_driver_spi
            esp_lcd
            spi_flash
)